added resolve_refs
